Clean up group-coordinator