@@ -19,7 +19,7 @@ package org.apache.kafka.coordinator.group.streams.topics;
 import org.apache.kafka.common.message.CreateTopicsRequestData.CreatableTopic;
 import org.apache.kafka.common.message.StreamsGroupDescribeResponseData;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
@@ -68,7 +68,7 @@ public record ConfiguredTopology(int topologyEpoch,
             .setSubtopologies(
                 subtopologies.map(stringConfiguredSubtopologyMap -> stringConfiguredSubtopologyMap.entrySet().stream().map(
                     entry -> entry.getValue().asStreamsGroupDescribeSubtopology(entry.getKey())
-                ).collect(Collectors.toList())).orElse(Collections.emptyList())
+                ).collect(Collectors.toList())).orElse(List.of())
             );
     }
 
