@@ -241,7 +241,7 @@ public class GroupMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberEpoch(0)
                 .setRebalanceTimeoutMs(5000)
-                .setTopicPartitions(Collections.emptyList())));
+                .setTopicPartitions(List.of())));
         assertEquals("Either SubscribedTopicNames or SubscribedTopicRegex must be non-null when (re-)joining.", ex.getMessage());
 
         // InstanceId must be non-empty if provided in all requests.
@@ -278,7 +278,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(LEAVE_GROUP_STATIC_MEMBER_EPOCH)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList())));
+                .setTopicPartitions(List.of())));
 
         assertEquals("InstanceId can't be null.", ex.getMessage());
     }
@@ -287,7 +287,7 @@ public class GroupMetadataManagerTest {
     public void testConsumerHeartbeatRegexValidation() {
         String memberId = Uuid.randomUuid().toString();
         MockPartitionAssignor assignor = new MockPartitionAssignor("range");
-        assignor.prepareGroupAssignment(new GroupAssignment(Collections.emptyMap()));
+        assignor.prepareGroupAssignment(new GroupAssignment(Map.of()));
         GroupMetadataManagerTestContext context = new GroupMetadataManagerTestContext.Builder()
             .withConfig(GroupCoordinatorConfig.CONSUMER_GROUP_ASSIGNORS_CONFIG, List.of(assignor))
             .build();
@@ -301,7 +301,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(0)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicRegex("[")
-                .setTopicPartitions(Collections.emptyList())));
+                .setTopicPartitions(List.of())));
         assertEquals("SubscribedTopicRegex `[` is not a valid regular expression: missing closing ].", ex.getMessage());
 
         // Subscribing with a valid regular expression succeeds.
@@ -312,7 +312,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(0)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicRegex(".*")
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
         assertEquals(1, result.response().memberEpoch());
 
         // Updating the subscription to an invalid regular expression fails.
@@ -323,7 +323,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(1)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicRegex("[")
-                .setTopicPartitions(Collections.emptyList())));
+                .setTopicPartitions(List.of())));
         assertEquals("SubscribedTopicRegex `[` is not a valid regular expression: missing closing ].", ex.getMessage());
 
         // Updating the subscription to topic names succeeds (checking when the regex becomes null).
@@ -334,7 +334,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(1)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
         assertEquals(2, result.response().memberEpoch());
     }
 
@@ -347,7 +347,7 @@ public class GroupMetadataManagerTest {
             .build();
 
         assignor.prepareGroupAssignment(new GroupAssignment(
-            Collections.emptyMap()
+            Map.of()
         ));
 
         CoordinatorResult<ConsumerGroupHeartbeatResponseData, CoordinatorRecord> result = context.consumerGroupHeartbeat(
@@ -359,7 +359,7 @@ public class GroupMetadataManagerTest {
                 .setServerAssignor("range")
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList()),
+                .setTopicPartitions(List.of()),
             (short) 0
         );
 
@@ -400,7 +400,7 @@ public class GroupMetadataManagerTest {
                     .setMemberEpoch(100) // Epoch must be > 0.
                     .setRebalanceTimeoutMs(5000)
                     .setSubscribedTopicNames(List.of("foo", "bar"))
-                    .setTopicPartitions(Collections.emptyList())));
+                    .setTopicPartitions(List.of())));
     }
 
     @Test
@@ -422,7 +422,7 @@ public class GroupMetadataManagerTest {
                 .setServerAssignor(NoOpPartitionAssignor.NAME)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         // The second member is rejected because the member id is unknown and
         // the member epoch is not zero.
@@ -434,7 +434,7 @@ public class GroupMetadataManagerTest {
                     .setMemberEpoch(1)
                     .setRebalanceTimeoutMs(5000)
                     .setSubscribedTopicNames(List.of("foo", "bar"))
-                    .setTopicPartitions(Collections.emptyList())));
+                    .setTopicPartitions(List.of())));
     }
 
     @Test
@@ -558,7 +558,7 @@ public class GroupMetadataManagerTest {
                 .setServerAssignor("range")
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -788,7 +788,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
                 .setServerAssignor("range")
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -903,7 +903,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(LEAVE_GROUP_MEMBER_EPOCH)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -1012,7 +1012,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setServerAssignor("range")
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -1135,7 +1135,7 @@ public class GroupMetadataManagerTest {
                 .setInstanceId(memberId2)
                 .setMemberEpoch(-2)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         // Member epoch of the response would be set to -2.
         assertResponseEquals(
@@ -1163,7 +1163,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setServerAssignor("range")
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -1341,7 +1341,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setServerAssignor("range")
                 .setSubscribedTopicNames(List.of("foo", "bar")) // bar is new.
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -1493,7 +1493,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(LEAVE_GROUP_STATIC_MEMBER_EPOCH)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         // member epoch of the response would be set to -2
         assertResponseEquals(
@@ -1583,7 +1583,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(LEAVE_GROUP_MEMBER_EPOCH)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -1654,7 +1654,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setServerAssignor("range")
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList())));
+                .setTopicPartitions(List.of())));
     }
 
     @Test
@@ -1703,7 +1703,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setServerAssignor("range")
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList())));
+                .setTopicPartitions(List.of())));
     }
 
     @Test
@@ -1749,7 +1749,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(11)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList())));
+                .setTopicPartitions(List.of())));
     }
 
     @Test
@@ -1882,7 +1882,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(LEAVE_GROUP_STATIC_MEMBER_EPOCH)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList())));
+                .setTopicPartitions(List.of())));
     }
 
     @Test
@@ -1928,7 +1928,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(LEAVE_GROUP_STATIC_MEMBER_EPOCH)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList())));
+                .setTopicPartitions(List.of())));
     }
 
     @Test
@@ -1965,7 +1965,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
                 .setServerAssignor("range")
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -2005,7 +2005,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
                 .setServerAssignor("range")
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -2030,7 +2030,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicRegex("foo.*")
                 .setServerAssignor("range")
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -2139,7 +2139,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
                 .setServerAssignor("range")
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -2329,7 +2329,7 @@ public class GroupMetadataManagerTest {
             result.response()
         );
 
-        assertEquals(Collections.emptyList(), result.records());
+        assertEquals(List.of(), result.records());
         assertEquals(MemberState.UNREVOKED_PARTITIONS, context.consumerGroupMemberState(groupId, memberId2));
         assertEquals(ConsumerGroup.ConsumerGroupState.RECONCILING, context.consumerGroupState(groupId));
 
@@ -2382,7 +2382,7 @@ public class GroupMetadataManagerTest {
             result.response()
         );
 
-        assertEquals(Collections.emptyList(), result.records());
+        assertEquals(List.of(), result.records());
         assertEquals(MemberState.UNRELEASED_PARTITIONS, context.consumerGroupMemberState(groupId, memberId3));
         assertEquals(ConsumerGroup.ConsumerGroupState.RECONCILING, context.consumerGroupState(groupId));
 
@@ -2544,7 +2544,7 @@ public class GroupMetadataManagerTest {
                     .setServerAssignor("range")
                     .setRebalanceTimeoutMs(5000)
                     .setSubscribedTopicNames(List.of("foo", "bar"))
-                    .setTopicPartitions(Collections.emptyList())));
+                    .setTopicPartitions(List.of())));
     }
 
     @Test
@@ -2630,7 +2630,7 @@ public class GroupMetadataManagerTest {
                     .setRebalanceTimeoutMs(5000)
                     .setSubscribedTopicNames(List.of("foo", "bar"))
                     .setServerAssignor("range")
-                    .setTopicPartitions(Collections.emptyList())));
+                    .setTopicPartitions(List.of())));
     }
 
     @Test
@@ -2873,9 +2873,9 @@ public class GroupMetadataManagerTest {
             .withConfig(GroupCoordinatorConfig.CONSUMER_GROUP_ASSIGNORS_CONFIG, List.of(assignor))
             .build();
 
-        assertEquals(Collections.emptySet(), context.groupMetadataManager.groupsSubscribedToTopic("foo"));
-        assertEquals(Collections.emptySet(), context.groupMetadataManager.groupsSubscribedToTopic("bar"));
-        assertEquals(Collections.emptySet(), context.groupMetadataManager.groupsSubscribedToTopic("zar"));
+        assertEquals(Set.of(), context.groupMetadataManager.groupsSubscribedToTopic("foo"));
+        assertEquals(Set.of(), context.groupMetadataManager.groupsSubscribedToTopic("bar"));
+        assertEquals(Set.of(), context.groupMetadataManager.groupsSubscribedToTopic("zar"));
 
         // M1 in group 1 subscribes to foo and bar.
         context.replay(GroupCoordinatorRecordHelpers.newConsumerGroupMemberSubscriptionRecord(groupId1,
@@ -2885,7 +2885,7 @@ public class GroupMetadataManagerTest {
 
         assertEquals(Set.of(groupId1), context.groupMetadataManager.groupsSubscribedToTopic("foo"));
         assertEquals(Set.of(groupId1), context.groupMetadataManager.groupsSubscribedToTopic("bar"));
-        assertEquals(Collections.emptySet(), context.groupMetadataManager.groupsSubscribedToTopic("zar"));
+        assertEquals(Set.of(), context.groupMetadataManager.groupsSubscribedToTopic("zar"));
 
         // M1 in group 2 subscribes to foo, bar and zar.
         context.replay(GroupCoordinatorRecordHelpers.newConsumerGroupMemberSubscriptionRecord(groupId2,
@@ -2928,7 +2928,7 @@ public class GroupMetadataManagerTest {
         // M1 in group 2 subscribes to nothing.
         context.replay(GroupCoordinatorRecordHelpers.newConsumerGroupMemberSubscriptionRecord(groupId2,
             new ConsumerGroupMember.Builder("group2-m1")
-                .setSubscribedTopicNames(Collections.emptyList())
+                .setSubscribedTopicNames(List.of())
                 .build()));
 
         assertEquals(Set.of(groupId2), context.groupMetadataManager.groupsSubscribedToTopic("foo"));
@@ -2948,22 +2948,22 @@ public class GroupMetadataManagerTest {
         // M2 in group 2 subscribes to nothing.
         context.replay(GroupCoordinatorRecordHelpers.newConsumerGroupMemberSubscriptionRecord(groupId2,
             new ConsumerGroupMember.Builder("group2-m2")
-                .setSubscribedTopicNames(Collections.emptyList())
+                .setSubscribedTopicNames(List.of())
                 .build()));
 
-        assertEquals(Collections.emptySet(), context.groupMetadataManager.groupsSubscribedToTopic("foo"));
+        assertEquals(Set.of(), context.groupMetadataManager.groupsSubscribedToTopic("foo"));
         assertEquals(Set.of(groupId1), context.groupMetadataManager.groupsSubscribedToTopic("bar"));
         assertEquals(Set.of(groupId1), context.groupMetadataManager.groupsSubscribedToTopic("zar"));
 
         // M2 in group 1 subscribes to nothing.
         context.replay(GroupCoordinatorRecordHelpers.newConsumerGroupMemberSubscriptionRecord(groupId1,
             new ConsumerGroupMember.Builder("group1-m2")
-                .setSubscribedTopicNames(Collections.emptyList())
+                .setSubscribedTopicNames(List.of())
                 .build()));
 
-        assertEquals(Collections.emptySet(), context.groupMetadataManager.groupsSubscribedToTopic("foo"));
-        assertEquals(Collections.emptySet(), context.groupMetadataManager.groupsSubscribedToTopic("bar"));
-        assertEquals(Collections.emptySet(), context.groupMetadataManager.groupsSubscribedToTopic("zar"));
+        assertEquals(Set.of(), context.groupMetadataManager.groupsSubscribedToTopic("foo"));
+        assertEquals(Set.of(), context.groupMetadataManager.groupsSubscribedToTopic("bar"));
+        assertEquals(Set.of(), context.groupMetadataManager.groupsSubscribedToTopic("zar"));
     }
 
     @Test
@@ -3099,7 +3099,7 @@ public class GroupMetadataManagerTest {
                     .setMemberEpoch(0)
                     .setRebalanceTimeoutMs(90000)
                     .setSubscribedTopicNames(List.of("foo"))
-                    .setTopicPartitions(Collections.emptyList()));
+                    .setTopicPartitions(List.of()));
         assertEquals(1, result.response().memberEpoch());
 
         // Verify that there is a session time.
@@ -3107,7 +3107,7 @@ public class GroupMetadataManagerTest {
 
         // Advance time.
         assertEquals(
-            Collections.emptyList(),
+            List.of(),
             context.sleep(result.response().heartbeatIntervalMs())
         );
 
@@ -3124,7 +3124,7 @@ public class GroupMetadataManagerTest {
 
         // Advance time.
         assertEquals(
-            Collections.emptyList(),
+            List.of(),
             context.sleep(result.response().heartbeatIntervalMs())
         );
 
@@ -3174,7 +3174,7 @@ public class GroupMetadataManagerTest {
                     .setMemberEpoch(0)
                     .setRebalanceTimeoutMs(90000)
                     .setSubscribedTopicNames(List.of("foo"))
-                    .setTopicPartitions(Collections.emptyList()));
+                    .setTopicPartitions(List.of()));
         assertEquals(1, result.response().memberEpoch());
 
         // Verify that there is a session time.
@@ -3192,7 +3192,7 @@ public class GroupMetadataManagerTest {
                         GroupCoordinatorRecordHelpers.newConsumerGroupCurrentAssignmentTombstoneRecord(groupId, memberId),
                         GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentTombstoneRecord(groupId, memberId),
                         GroupCoordinatorRecordHelpers.newConsumerGroupMemberSubscriptionTombstoneRecord(groupId, memberId),
-                        GroupCoordinatorRecordHelpers.newConsumerGroupSubscriptionMetadataRecord(groupId, Collections.emptyMap()),
+                        GroupCoordinatorRecordHelpers.newConsumerGroupSubscriptionMetadataRecord(groupId, Map.of()),
                         GroupCoordinatorRecordHelpers.newConsumerGroupEpochRecord(groupId, 2)
                     )
                 )
@@ -3239,7 +3239,7 @@ public class GroupMetadataManagerTest {
                     .setMemberEpoch(0)
                     .setRebalanceTimeoutMs(90000)
                     .setSubscribedTopicNames(List.of("foo"))
-                    .setTopicPartitions(Collections.emptyList()));
+                    .setTopicPartitions(List.of()));
         assertEquals(1, result.response().memberEpoch());
 
         // Verify that there is a session time.
@@ -3254,7 +3254,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(LEAVE_GROUP_STATIC_MEMBER_EPOCH)
                 .setRebalanceTimeoutMs(90000)
                 .setSubscribedTopicNames(List.of("foo"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertEquals(-2, result.response().memberEpoch());
 
@@ -3273,7 +3273,7 @@ public class GroupMetadataManagerTest {
                         GroupCoordinatorRecordHelpers.newConsumerGroupCurrentAssignmentTombstoneRecord(groupId, memberId),
                         GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentTombstoneRecord(groupId, memberId),
                         GroupCoordinatorRecordHelpers.newConsumerGroupMemberSubscriptionTombstoneRecord(groupId, memberId),
-                        GroupCoordinatorRecordHelpers.newConsumerGroupSubscriptionMetadataRecord(groupId, Collections.emptyMap()),
+                        GroupCoordinatorRecordHelpers.newConsumerGroupSubscriptionMetadataRecord(groupId, Map.of()),
                         GroupCoordinatorRecordHelpers.newConsumerGroupEpochRecord(groupId, 2)
                     )
                 )
@@ -3318,7 +3318,7 @@ public class GroupMetadataManagerTest {
                     .setMemberEpoch(0)
                     .setRebalanceTimeoutMs(180000)
                     .setSubscribedTopicNames(List.of("foo"))
-                    .setTopicPartitions(Collections.emptyList()));
+                    .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -3334,7 +3334,7 @@ public class GroupMetadataManagerTest {
         );
 
         assertEquals(
-            Collections.emptyList(),
+            List.of(),
             context.sleep(result.response().heartbeatIntervalMs())
         );
 
@@ -3356,7 +3356,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(0)
                 .setRebalanceTimeoutMs(90000)
                 .setSubscribedTopicNames(List.of("foo"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -3368,7 +3368,7 @@ public class GroupMetadataManagerTest {
         );
 
         assertEquals(
-            Collections.emptyList(),
+            List.of(),
             context.sleep(result.response().heartbeatIntervalMs())
         );
 
@@ -3401,7 +3401,7 @@ public class GroupMetadataManagerTest {
             context.assertRebalanceTimeout(groupId, memberId1, 12000);
 
         assertEquals(
-            Collections.emptyList(),
+            List.of(),
             context.sleep(result.response().heartbeatIntervalMs())
         );
 
@@ -3428,7 +3428,7 @@ public class GroupMetadataManagerTest {
 
         // Execute the scheduled revocation timeout captured earlier to simulate a
         // stale timeout. This should be a no-op.
-        assertEquals(Collections.emptyList(), scheduledTimeout.operation.generateRecords().records());
+        assertEquals(List.of(), scheduledTimeout.operation.generateRecords().records());
     }
 
     @Test
@@ -3463,7 +3463,7 @@ public class GroupMetadataManagerTest {
                     .setMemberEpoch(0)
                     .setRebalanceTimeoutMs(10000) // Use timeout smaller than session timeout.
                     .setSubscribedTopicNames(List.of("foo"))
-                    .setTopicPartitions(Collections.emptyList()));
+                    .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -3479,7 +3479,7 @@ public class GroupMetadataManagerTest {
         );
 
         assertEquals(
-            Collections.emptyList(),
+            List.of(),
             context.sleep(result.response().heartbeatIntervalMs())
         );
 
@@ -3501,7 +3501,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(0)
                 .setRebalanceTimeoutMs(10000)
                 .setSubscribedTopicNames(List.of("foo"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -3513,7 +3513,7 @@ public class GroupMetadataManagerTest {
         );
 
         assertEquals(
-            Collections.emptyList(),
+            List.of(),
             context.sleep(result.response().heartbeatIntervalMs())
         );
 
@@ -3729,9 +3729,9 @@ public class GroupMetadataManagerTest {
         group6.transitionTo(STABLE);
         group7.transitionTo(DEAD);
 
-        context.groupMetadataManager.getOrMaybeCreateConsumerGroup(groupIds.get(1), false, Collections.emptyList())
+        context.groupMetadataManager.getOrMaybeCreateConsumerGroup(groupIds.get(1), false, List.of())
             .removeMember(consumerMemberIds.get(0));
-        context.groupMetadataManager.getOrMaybeCreateConsumerGroup(groupIds.get(3), false, Collections.emptyList())
+        context.groupMetadataManager.getOrMaybeCreateConsumerGroup(groupIds.get(3), false, List.of())
             .updateMember(new ConsumerGroupMember.Builder(consumerMemberIds.get(2)).setMemberEpoch(10).build());
 
         context.groupMetadataManager.updateGroupSizeCounter();
@@ -5396,7 +5396,7 @@ public class GroupMetadataManagerTest {
         String newMemberId = group.staticMemberId("group-instance-id");
 
         JoinGroupResponseData expectedResponse = new JoinGroupResponseData()
-            .setMembers(Collections.emptyList())
+            .setMembers(List.of())
             .setLeader(oldMemberId)
             .setMemberId(newMemberId)
             .setGenerationId(1)
@@ -5521,7 +5521,7 @@ public class GroupMetadataManagerTest {
         assertTrue(joinResult.joinFuture.isDone());
 
         JoinGroupResponseData expectedResponse = new JoinGroupResponseData()
-            .setMembers(Collections.emptyList())
+            .setMembers(List.of())
             .setLeader(oldMemberId)
             .setMemberId(UNKNOWN_MEMBER_ID)
             .setGenerationId(1)
@@ -5597,7 +5597,7 @@ public class GroupMetadataManagerTest {
         assertTrue(joinResult.joinFuture.isDone());
 
         JoinGroupResponseData expectedResponse = new JoinGroupResponseData()
-            .setMembers(supportSkippingAssignment ? toJoinResponseMembers(group) : Collections.emptyList())
+            .setMembers(supportSkippingAssignment ? toJoinResponseMembers(group) : List.of())
             .setLeader(supportSkippingAssignment ? joinResult.joinFuture.get().memberId() : oldMemberId)
             .setMemberId(joinResult.joinFuture.get().memberId())
             .setGenerationId(1)
@@ -5719,7 +5719,7 @@ public class GroupMetadataManagerTest {
         List<CoordinatorRecord> expectedRecords = List.of(GroupMetadataManagerTestContext.newGroupMetadataRecord(
             group.groupId(),
             new GroupMetadataValue()
-                .setMembers(Collections.emptyList())
+                .setMembers(List.of())
                 .setGeneration(2)
                 .setLeader(null)
                 .setProtocolType("consumer")
@@ -5850,7 +5850,7 @@ public class GroupMetadataManagerTest {
             oldFollowerJoinResult.joinFuture.get(),
             group,
             PREPARING_REBALANCE,
-            Collections.emptySet()
+            Set.of()
         );
     }
 
@@ -5928,7 +5928,7 @@ public class GroupMetadataManagerTest {
             oldFollowerJoinResult.joinFuture.get(),
             group,
             COMPLETING_REBALANCE,
-            Collections.emptySet()
+            Set.of()
         );
 
         assertTrue(group.isInState(COMPLETING_REBALANCE));
@@ -6048,14 +6048,14 @@ public class GroupMetadataManagerTest {
             .setLeader(rebalanceResult.leaderId)
             .setProtocolName("range")
             .setProtocolType("consumer")
-            .setMembers(Collections.emptyList());
+            .setMembers(List.of());
 
         checkJoinGroupResponse(
             expectedDuplicateFollowerResponse,
             duplicateFollowerJoinResult.joinFuture.get(),
             group,
             COMPLETING_REBALANCE,
-            Collections.emptySet()
+            Set.of()
         );
 
         assertTrue(duplicateFollowerJoinResult.joinFuture.isDone());
@@ -6067,14 +6067,14 @@ public class GroupMetadataManagerTest {
             .setLeader(UNKNOWN_MEMBER_ID)
             .setProtocolName(null)
             .setProtocolType(null)
-            .setMembers(Collections.emptyList());
+            .setMembers(List.of());
 
         checkJoinGroupResponse(
             expectedOldFollowerResponse,
             oldFollowerJoinResult.joinFuture.get(),
             group,
             COMPLETING_REBALANCE,
-            Collections.emptySet()
+            Set.of()
         );
     }
 
@@ -6165,7 +6165,7 @@ public class GroupMetadataManagerTest {
             joinResult.joinFuture.get().memberId() : rebalanceResult.leaderId;
 
         List<JoinGroupResponseMember> members = supportSkippingAssignment ?
-            toJoinResponseMembers(group) : Collections.emptyList();
+            toJoinResponseMembers(group) : List.of();
 
         JoinGroupResponseData expectedJoinResponse = new JoinGroupResponseData()
             .setErrorCode(Errors.NONE.code())
@@ -6182,7 +6182,7 @@ public class GroupMetadataManagerTest {
             joinResult.joinFuture.get(),
             group,
             STABLE,
-            supportSkippingAssignment ? Set.of("leader-instance-id", "follower-instance-id") : Collections.emptySet()
+            supportSkippingAssignment ? Set.of("leader-instance-id", "follower-instance-id") : Set.of()
         );
 
         GroupMetadataManagerTestContext.JoinResult oldLeaderJoinResult = context.sendClassicGroupJoin(
@@ -6482,14 +6482,14 @@ public class GroupMetadataManagerTest {
             .setProtocolName("range")
             .setProtocolType("consumer")
             .setSkipAssignment(false)
-            .setMembers(Collections.emptyList());
+            .setMembers(List.of());
 
         checkJoinGroupResponse(
             expectedResponse,
             followerJoinResult.joinFuture.get(),
             group,
             STABLE,
-            Collections.emptySet()
+            Set.of()
         );
 
         // Join with old member id will not fail because the member id is not updated because of persistence failure
@@ -6590,14 +6590,14 @@ public class GroupMetadataManagerTest {
             .setProtocolName("range")
             .setProtocolType("consumer")
             .setSkipAssignment(false)
-            .setMembers(Collections.emptyList());
+            .setMembers(List.of());
 
         checkJoinGroupResponse(
             expectedResponse,
             followerJoinResult.joinFuture.get(),
             group,
             STABLE,
-            Collections.emptySet()
+            Set.of()
         );
 
         // Join with old member id will fail because the member id is updated
@@ -6614,7 +6614,7 @@ public class GroupMetadataManagerTest {
             .withGroupInstanceId("follower-instance-id")
             .withGenerationId(rebalanceResult.generationId)
             .withMemberId(rebalanceResult.followerId)
-            .withAssignment(Collections.emptyList())
+            .withAssignment(List.of())
             .build();
 
         GroupMetadataManagerTestContext.SyncResult syncResult = context.sendClassicGroupSync(syncRequest);
@@ -6706,14 +6706,14 @@ public class GroupMetadataManagerTest {
             .setProtocolName("range")
             .setProtocolType("consumer")
             .setSkipAssignment(false)
-            .setMembers(Collections.emptyList());
+            .setMembers(List.of());
 
         checkJoinGroupResponse(
             expectedFollowerResponse,
             followerJoinResult.joinFuture.get(),
             group,
             COMPLETING_REBALANCE,
-            Collections.emptySet()
+            Set.of()
         );
 
         // The follower protocol changed from protocolSuperset to general protocols.
@@ -6805,14 +6805,14 @@ public class GroupMetadataManagerTest {
             .setProtocolName("range")
             .setProtocolType("consumer")
             .setSkipAssignment(false)
-            .setMembers(Collections.emptyList());
+            .setMembers(List.of());
 
         checkJoinGroupResponse(
             expectedFollowerResponse,
             followerJoinResult.joinFuture.get(),
             group,
             STABLE,
-            Collections.emptySet()
+            Set.of()
         );
         assertNotEquals(rebalanceResult.followerId, followerJoinResult.joinFuture.get().memberId());
 
@@ -6872,14 +6872,14 @@ public class GroupMetadataManagerTest {
             .setProtocolName("range")
             .setProtocolType("consumer")
             .setSkipAssignment(false)
-            .setMembers(Collections.emptyList());
+            .setMembers(List.of());
 
         checkJoinGroupResponse(
             expectedFollowerResponse,
             followerJoinResult.joinFuture.get(),
             group,
             STABLE,
-            Collections.emptySet()
+            Set.of()
         );
     }
 
@@ -7148,14 +7148,14 @@ public class GroupMetadataManagerTest {
             .setProtocolName("range")
             .setProtocolType("consumer")
             .setSkipAssignment(false)
-            .setMembers(Collections.emptyList());
+            .setMembers(List.of());
 
         checkJoinGroupResponse(
             expectedNewMemberResponse,
             newMemberJoinResult.joinFuture.get(),
             group,
             COMPLETING_REBALANCE,
-            Collections.emptySet()
+            Set.of()
         );
     }
 
@@ -7244,14 +7244,14 @@ public class GroupMetadataManagerTest {
             .setProtocolName("range")
             .setProtocolType("consumer")
             .setSkipAssignment(false)
-            .setMembers(Collections.emptyList());
+            .setMembers(List.of());
 
         checkJoinGroupResponse(
             expectedNewMemberResponse,
             newFollowerResponse,
             group,
             COMPLETING_REBALANCE,
-            Collections.emptySet()
+            Set.of()
         );
     }
 
@@ -8679,7 +8679,7 @@ public class GroupMetadataManagerTest {
         context.replay(GroupMetadataManagerTestContext.newGroupMetadataRecord(
             classicGroupId,
             new GroupMetadataValue()
-                .setMembers(Collections.emptyList())
+                .setMembers(List.of())
                 .setGeneration(2)
                 .setLeader(null)
                 .setProtocolType("classic")
@@ -8696,7 +8696,7 @@ public class GroupMetadataManagerTest {
 
         // Test list group response without a group state or group type filter.
         Map<String, ListGroupsResponseData.ListedGroup> actualAllGroupMap =
-            context.sendListGroups(Collections.emptyList(), Collections.emptyList()).stream()
+            context.sendListGroups(List.of(), List.of()).stream()
                 .collect(Collectors.toMap(ListGroupsResponseData.ListedGroup::groupId, Function.identity()));
 
         Map<String, ListGroupsResponseData.ListedGroup> expectAllGroupMap =
@@ -8722,7 +8722,7 @@ public class GroupMetadataManagerTest {
 
         // List group with case-insensitive ‘empty’.
         actualAllGroupMap =
-            context.sendListGroups(List.of("empty"), Collections.emptyList())
+            context.sendListGroups(List.of("empty"), List.of())
                 .stream().collect(Collectors.toMap(ListGroupsResponseData.ListedGroup::groupId, Function.identity()));
 
         assertEquals(expectAllGroupMap, actualAllGroupMap);
@@ -8730,7 +8730,7 @@ public class GroupMetadataManagerTest {
         context.commit();
 
         // Test list group response to check assigning state in the consumer group.
-        actualAllGroupMap = context.sendListGroups(List.of("assigning"), Collections.emptyList()).stream()
+        actualAllGroupMap = context.sendListGroups(List.of("assigning"), List.of()).stream()
             .collect(Collectors.toMap(ListGroupsResponseData.ListedGroup::groupId, Function.identity()));
         expectAllGroupMap =
             Stream.of(
@@ -8744,7 +8744,7 @@ public class GroupMetadataManagerTest {
         assertEquals(expectAllGroupMap, actualAllGroupMap);
 
         // Test list group response with group state filter and no group type filter.
-        actualAllGroupMap = context.sendListGroups(List.of("Empty"), Collections.emptyList()).stream()
+        actualAllGroupMap = context.sendListGroups(List.of("Empty"), List.of()).stream()
             .collect(Collectors.toMap(ListGroupsResponseData.ListedGroup::groupId, Function.identity()));
         expectAllGroupMap = Stream.of(
             new ListGroupsResponseData.ListedGroup()
@@ -8762,7 +8762,7 @@ public class GroupMetadataManagerTest {
         assertEquals(expectAllGroupMap, actualAllGroupMap);
 
         // Test list group response with no group state filter and with group type filter.
-        actualAllGroupMap = context.sendListGroups(Collections.emptyList(), List.of(Group.GroupType.CLASSIC.toString())).stream()
+        actualAllGroupMap = context.sendListGroups(List.of(), List.of(Group.GroupType.CLASSIC.toString())).stream()
             .collect(Collectors.toMap(ListGroupsResponseData.ListedGroup::groupId, Function.identity()));
         expectAllGroupMap = Stream.of(
             new ListGroupsResponseData.ListedGroup()
@@ -8775,7 +8775,7 @@ public class GroupMetadataManagerTest {
         assertEquals(expectAllGroupMap, actualAllGroupMap);
 
         // Test list group response with no group state filter and with group type filter in a different case.
-        actualAllGroupMap = context.sendListGroups(Collections.emptyList(), List.of("Consumer")).stream()
+        actualAllGroupMap = context.sendListGroups(List.of(), List.of("Consumer")).stream()
             .collect(Collectors.toMap(ListGroupsResponseData.ListedGroup::groupId, Function.identity()));
         expectAllGroupMap = Stream.of(
             new ListGroupsResponseData.ListedGroup()
@@ -8787,7 +8787,7 @@ public class GroupMetadataManagerTest {
 
         assertEquals(expectAllGroupMap, actualAllGroupMap);
 
-        actualAllGroupMap = context.sendListGroups(Collections.emptyList(), List.of("Share")).stream()
+        actualAllGroupMap = context.sendListGroups(List.of(), List.of("Share")).stream()
             .collect(Collectors.toMap(ListGroupsResponseData.ListedGroup::groupId, Function.identity()));
         expectAllGroupMap = Stream.of(
             new ListGroupsResponseData.ListedGroup()
@@ -8799,7 +8799,7 @@ public class GroupMetadataManagerTest {
 
         assertEquals(expectAllGroupMap, actualAllGroupMap);
 
-        actualAllGroupMap = context.sendListGroups(List.of("empty", "Assigning"), Collections.emptyList()).stream()
+        actualAllGroupMap = context.sendListGroups(List.of("empty", "Assigning"), List.of()).stream()
             .collect(Collectors.toMap(ListGroupsResponseData.ListedGroup::groupId, Function.identity()));
         expectAllGroupMap = Stream.of(
             new ListGroupsResponseData.ListedGroup()
@@ -8822,16 +8822,16 @@ public class GroupMetadataManagerTest {
         assertEquals(expectAllGroupMap, actualAllGroupMap);
 
         // Test list group response with no group state filter and with invalid group type filter .
-        actualAllGroupMap = context.sendListGroups(Collections.emptyList(), List.of("Invalid")).stream()
+        actualAllGroupMap = context.sendListGroups(List.of(), List.of("Invalid")).stream()
             .collect(Collectors.toMap(ListGroupsResponseData.ListedGroup::groupId, Function.identity()));
-        expectAllGroupMap = Collections.emptyMap();
+        expectAllGroupMap = Map.of();
 
         assertEquals(expectAllGroupMap, actualAllGroupMap);
 
         // Test list group response with invalid group state filter and with no group type filter .
-        actualAllGroupMap = context.sendListGroups(List.of("Invalid"), Collections.emptyList()).stream()
+        actualAllGroupMap = context.sendListGroups(List.of("Invalid"), List.of()).stream()
             .collect(Collectors.toMap(ListGroupsResponseData.ListedGroup::groupId, Function.identity()));
-        expectAllGroupMap = Collections.emptyMap();
+        expectAllGroupMap = Map.of();
 
         assertEquals(expectAllGroupMap, actualAllGroupMap);
     }
@@ -8865,7 +8865,7 @@ public class GroupMetadataManagerTest {
                 .setGroupId(consumerGroupIds.get(1))
                 .setMembers(List.of(
                     memberBuilder.build().asConsumerGroupDescribeMember(
-                        new Assignment(Collections.emptyMap()),
+                        new Assignment(Map.of()),
                         new MetadataImageBuilder().build().topics()
                     )
                 ))
@@ -8921,7 +8921,7 @@ public class GroupMetadataManagerTest {
         context.replay(GroupCoordinatorRecordHelpers.newConsumerGroupMemberSubscriptionRecord(consumerGroupId, memberBuilder1.build()));
         context.replay(GroupCoordinatorRecordHelpers.newConsumerGroupEpochRecord(consumerGroupId, epoch + 1));
 
-        Map<Uuid, Set<Integer>> assignmentMap = Map.of(topicId, Collections.emptySet());
+        Map<Uuid, Set<Integer>> assignmentMap = Map.of(topicId, Set.of());
 
         ConsumerGroupMember.Builder memberBuilder2 = new ConsumerGroupMember.Builder(memberId2);
         context.replay(GroupCoordinatorRecordHelpers.newConsumerGroupMemberSubscriptionRecord(consumerGroupId, memberBuilder2.build()));
@@ -8946,7 +8946,7 @@ public class GroupMetadataManagerTest {
         describedGroup = new ConsumerGroupDescribeResponseData.DescribedGroup()
             .setGroupId(consumerGroupId)
             .setMembers(List.of(
-                memberBuilder1.build().asConsumerGroupDescribeMember(new Assignment(Collections.emptyMap()), metadataImage.topics()),
+                memberBuilder1.build().asConsumerGroupDescribeMember(new Assignment(Map.of()), metadataImage.topics()),
                 memberBuilder2.build().asConsumerGroupDescribeMember(new Assignment(assignmentMap), metadataImage.topics())
             ))
             .setGroupState(ConsumerGroup.ConsumerGroupState.ASSIGNING.toString())
@@ -9246,7 +9246,7 @@ public class GroupMetadataManagerTest {
         context.sleep(rebalanceTimeoutMs);
         // Only static leader is maintained, and group is stuck at PreparingRebalance stage
         assertTrue(group.allDynamicMemberIds().isEmpty());
-        assertEquals(Collections.singleton(rebalanceResult.leaderId), group.allMemberIds());
+        assertEquals(Set.of(rebalanceResult.leaderId), group.allMemberIds());
         assertTrue(group.allDynamicMemberIds().isEmpty());
         assertEquals(2, group.generationId());
         assertTrue(group.isInState(PREPARING_REBALANCE));
@@ -9748,11 +9748,11 @@ public class GroupMetadataManagerTest {
         records = new ArrayList<>();
         group.transitionTo(PREPARING_REBALANCE);
         context.groupMetadataManager.maybeDeleteGroup("group-id", records);
-        assertEquals(Collections.emptyList(), records);
+        assertEquals(List.of(), records);
 
         records = new ArrayList<>();
         context.groupMetadataManager.maybeDeleteGroup("invalid-group-id", records);
-        assertEquals(Collections.emptyList(), records);
+        assertEquals(List.of(), records);
     }
 
     @Test
@@ -9794,7 +9794,7 @@ public class GroupMetadataManagerTest {
             .setPreviousMemberEpoch(10)
             .build()));
         context.groupMetadataManager.maybeDeleteGroup(groupId, records);
-        assertEquals(Collections.emptyList(), records);
+        assertEquals(List.of(), records);
     }
 
     @Test
@@ -9841,7 +9841,7 @@ public class GroupMetadataManagerTest {
                 .setServerAssignor("range")
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         verify(context.metrics).record(CONSUMER_GROUP_REBALANCES_SENSOR_NAME);
     }
@@ -9871,7 +9871,7 @@ public class GroupMetadataManagerTest {
                     .setServerAssignor(NoOpPartitionAssignor.NAME)
                     .setRebalanceTimeoutMs(5000)
                     .setSubscribedTopicNames(List.of("foo", "bar"))
-                    .setTopicPartitions(Collections.emptyList())));
+                    .setTopicPartitions(List.of())));
     }
 
     @Test
@@ -9897,7 +9897,7 @@ public class GroupMetadataManagerTest {
                 .setServerAssignor(NoOpPartitionAssignor.NAME)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         ConsumerGroupMember expectedMember = new ConsumerGroupMember.Builder(memberId)
             .setState(MemberState.STABLE)
@@ -9908,7 +9908,7 @@ public class GroupMetadataManagerTest {
             .setClientHost(DEFAULT_CLIENT_ADDRESS.toString())
             .setSubscribedTopicNames(List.of("foo", "bar"))
             .setServerAssignorName(NoOpPartitionAssignor.NAME)
-            .setAssignedPartitions(Collections.emptyMap())
+            .setAssignedPartitions(Map.of())
             .build();
 
         assertEquals(Errors.NONE.code(), result.response().errorCode());
@@ -9917,7 +9917,7 @@ public class GroupMetadataManagerTest {
                 GroupCoordinatorRecordHelpers.newGroupMetadataTombstoneRecord(classicGroupId),
                 GroupCoordinatorRecordHelpers.newConsumerGroupMemberSubscriptionRecord(classicGroupId, expectedMember),
                 GroupCoordinatorRecordHelpers.newConsumerGroupEpochRecord(classicGroupId, 1),
-                GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentRecord(classicGroupId, memberId, Collections.emptyMap()),
+                GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentRecord(classicGroupId, memberId, Map.of()),
                 GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentEpochRecord(classicGroupId, 1),
                 GroupCoordinatorRecordHelpers.newConsumerGroupCurrentAssignmentRecord(classicGroupId, expectedMember)
             ),
@@ -10043,7 +10043,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setServerAssignor("range")
                 .setSubscribedTopicNames(List.of(fooTopicName, barTopicName))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         ConsumerGroupMember expectedMember1 = new ConsumerGroupMember.Builder(memberId1)
             .setMemberEpoch(0)
@@ -10071,7 +10071,7 @@ public class GroupMetadataManagerTest {
             .setServerAssignorName("range")
             .setSubscribedTopicNames(List.of(fooTopicName, barTopicName))
             .setRebalanceTimeoutMs(5000)
-            .setAssignedPartitions(Collections.emptyMap())
+            .setAssignedPartitions(Map.of())
             .build();
 
         List<CoordinatorRecord> expectedRecords = List.of(
@@ -10241,7 +10241,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setServerAssignor("range")
                 .setSubscribedTopicNames(List.of(fooTopicName, barTopicName))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         ConsumerGroupMember expectedMember1 = new ConsumerGroupMember.Builder(memberId1)
             .setMemberEpoch(0)
@@ -10284,7 +10284,7 @@ public class GroupMetadataManagerTest {
             .setServerAssignorName("range")
             .setSubscribedTopicNames(List.of(fooTopicName, barTopicName))
             .setRebalanceTimeoutMs(5000)
-            .setAssignedPartitions(Collections.emptyMap())
+            .setAssignedPartitions(Map.of())
             .build();
 
         List<CoordinatorRecord> expectedRecords = List.of(
@@ -10434,7 +10434,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setServerAssignor("range")
                 .setSubscribedTopicNames(List.of(fooTopicName, barTopicName))
-                .setTopicPartitions(Collections.emptyList());
+                .setTopicPartitions(List.of());
 
         if (expectUpgrade) {
             context.consumerGroupHeartbeat(consumerGroupHeartbeatRequestData);
@@ -10516,7 +10516,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setServerAssignor(NoOpPartitionAssignor.NAME)
                 .setSubscribedTopicNames(List.of(fooTopicName))
-                .setTopicPartitions(Collections.emptyList()),
+                .setTopicPartitions(List.of()),
             ApiKeys.CONSUMER_GROUP_HEARTBEAT.latestVersion()
         );
 
@@ -10661,7 +10661,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setServerAssignor(NoOpPartitionAssignor.NAME)
                 .setSubscribedTopicNames(List.of(fooTopicName, barTopicName))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         ConsumerGroupMember expectedMember1 = new ConsumerGroupMember.Builder(memberId1)
             .setMemberEpoch(1)
@@ -10676,7 +10676,7 @@ public class GroupMetadataManagerTest {
                     .setSessionTimeoutMs(5000)
                     .setSupportedProtocols(ConsumerGroupMember.classicProtocolListFromJoinRequestProtocolCollection(protocols))
             )
-            .setAssignedPartitions(Collections.emptyMap())
+            .setAssignedPartitions(Map.of())
             .build();
 
         ConsumerGroupMember expectedMember2 = new ConsumerGroupMember.Builder(memberId2)
@@ -10688,7 +10688,7 @@ public class GroupMetadataManagerTest {
             .setServerAssignorName(NoOpPartitionAssignor.NAME)
             .setSubscribedTopicNames(List.of(fooTopicName, barTopicName))
             .setRebalanceTimeoutMs(5000)
-            .setAssignedPartitions(Collections.emptyMap())
+            .setAssignedPartitions(Map.of())
             .build();
 
         List<CoordinatorRecord> expectedRecords = List.of(
@@ -10713,7 +10713,7 @@ public class GroupMetadataManagerTest {
 
             // Newly joining member 2 bumps the group epoch. A new target assignment is computed.
             GroupCoordinatorRecordHelpers.newConsumerGroupEpochRecord(groupId, 2),
-            GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentRecord(groupId, memberId2, Collections.emptyMap()),
+            GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentRecord(groupId, memberId2, Map.of()),
             GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentEpochRecord(groupId, 2),
 
             // Member 2 has no pending revoking partition or pending release partition.
@@ -10827,7 +10827,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setServerAssignor(NoOpPartitionAssignor.NAME)
                 .setSubscribedTopicNames(new ArrayList<>(member1.subscribedTopicNames()))
-                .setTopicPartitions(Collections.emptyList()),
+                .setTopicPartitions(List.of()),
             ApiKeys.CONSUMER_GROUP_HEARTBEAT.latestVersion()
         );
 
@@ -11028,7 +11028,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setServerAssignor("range")
                 .setSubscribedTopicNames(List.of(fooTopicName, barTopicName))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         ConsumerGroupMember expectedMember1 = new ConsumerGroupMember.Builder(memberId1)
             .setMemberEpoch(1)
@@ -11071,7 +11071,7 @@ public class GroupMetadataManagerTest {
             .setServerAssignorName("range")
             .setSubscribedTopicNames(List.of(fooTopicName, barTopicName))
             .setRebalanceTimeoutMs(5000)
-            .setAssignedPartitions(Collections.emptyMap())
+            .setAssignedPartitions(Map.of())
             .build();
 
         List<CoordinatorRecord> expectedRecords = List.of(
@@ -11155,12 +11155,12 @@ public class GroupMetadataManagerTest {
         assertTrue(joinResult2.joinFuture.isDone());
         assertEquals(new JoinGroupResponseData()
             .setMemberId(joinResult1.joinFuture.get().memberId())
-            .setMembers(Collections.emptyList())
+            .setMembers(List.of())
             .setErrorCode(NOT_COORDINATOR.code()), joinResult1.joinFuture.get());
 
         assertEquals(new JoinGroupResponseData()
             .setMemberId(joinResult2.joinFuture.get().memberId())
-            .setMembers(Collections.emptyList())
+            .setMembers(List.of())
             .setErrorCode(NOT_COORDINATOR.code()), joinResult2.joinFuture.get());
     }
 
@@ -11323,7 +11323,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(LEAVE_GROUP_MEMBER_EPOCH)
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
 
         byte[] assignment = Utils.toArray(ConsumerProtocol.serializeAssignment(new ConsumerPartitionAssignor.Assignment(List.of(
@@ -11501,7 +11501,7 @@ public class GroupMetadataManagerTest {
                 .setMemberId(memberId2)
                 .setMemberEpoch(10)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         // Verify that there is a session timeout.
         context.assertSessionTimeout(groupId, memberId2, 45000);
@@ -12114,7 +12114,7 @@ public class GroupMetadataManagerTest {
                 .withMemberId(UNKNOWN_MEMBER_ID)
                 .withProtocols(GroupMetadataManagerTestContext.toConsumerProtocol(
                     List.of(fooTopicName, barTopicName),
-                    Collections.emptyList(),
+                    List.of(),
                     version))
                 .build();
 
@@ -12254,7 +12254,7 @@ public class GroupMetadataManagerTest {
             .withMemberId(newMemberId)
             .withProtocols(GroupMetadataManagerTestContext.toConsumerProtocol(
                 List.of(fooTopicName),
-                Collections.emptyList()))
+                List.of()))
             .build();
 
         GroupMetadataManagerTestContext.JoinResult joinResult = context.sendClassicGroupJoin(request);
@@ -12308,7 +12308,7 @@ public class GroupMetadataManagerTest {
             .withGroupInstanceId(instanceId)
             .withProtocols(GroupMetadataManagerTestContext.toConsumerProtocol(
                 List.of(fooTopicName, barTopicName),
-                Collections.emptyList()))
+                List.of()))
             .build();
 
         GroupMetadataManagerTestContext.JoinResult joinResult = context.sendClassicGroupJoin(request);
@@ -12342,7 +12342,7 @@ public class GroupMetadataManagerTest {
             )),
             GroupCoordinatorRecordHelpers.newConsumerGroupEpochRecord(groupId, 11),
 
-            GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentRecord(groupId, newMemberId, Collections.emptyMap()),
+            GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentRecord(groupId, newMemberId, Map.of()),
             GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentEpochRecord(groupId, 11),
 
             GroupCoordinatorRecordHelpers.newConsumerGroupCurrentAssignmentRecord(groupId, expectedMember)
@@ -12404,7 +12404,7 @@ public class GroupMetadataManagerTest {
             .withGroupInstanceId(instanceId)
             .withProtocols(GroupMetadataManagerTestContext.toConsumerProtocol(
                 List.of(fooTopicName),
-                Collections.emptyList()))
+                List.of()))
             .build();
 
         // The static member joins with UNKNOWN_MEMBER_ID.
@@ -12565,7 +12565,7 @@ public class GroupMetadataManagerTest {
             .withMemberId(memberId1)
             .withProtocols(GroupMetadataManagerTestContext.toConsumerProtocol(
                 List.of(fooTopicName, barTopicName, zarTopicName),
-                Collections.emptyList()))
+                List.of()))
             .build();
         GroupMetadataManagerTestContext.JoinResult joinResult = context.sendClassicGroupJoin(request);
 
@@ -12587,7 +12587,7 @@ public class GroupMetadataManagerTest {
                     .setSupportedProtocols(ConsumerGroupMember.classicProtocolListFromJoinRequestProtocolCollection(
                         GroupMetadataManagerTestContext.toConsumerProtocol(
                             List.of(fooTopicName, barTopicName, zarTopicName),
-                            Collections.emptyList()
+                            List.of()
                         )
                     ))
             )
@@ -12792,7 +12792,7 @@ public class GroupMetadataManagerTest {
             .withSessionTimeoutMs(5000)
             .withProtocols(GroupMetadataManagerTestContext.toConsumerProtocol(
                 List.of(fooTopicName, barTopicName, zarTopicName),
-                Collections.emptyList()))
+                List.of()))
             .build();
         GroupMetadataManagerTestContext.JoinResult joinResult1 = context.sendClassicGroupJoin(request);
 
@@ -12813,7 +12813,7 @@ public class GroupMetadataManagerTest {
                     .setSupportedProtocols(ConsumerGroupMember.classicProtocolListFromJoinRequestProtocolCollection(
                         GroupMetadataManagerTestContext.toConsumerProtocol(
                             List.of(fooTopicName, barTopicName, zarTopicName),
-                            Collections.emptyList()
+                            List.of()
                         )
                     ))
             )
@@ -12877,7 +12877,7 @@ public class GroupMetadataManagerTest {
                 .setGroupId(groupId)
                 .setMemberId(memberId2)
                 .setMemberEpoch(10)
-                .setTopicPartitions(Collections.emptyList())
+                .setTopicPartitions(List.of())
         );
 
         // Member 1 heartbeats to be notified to rejoin.
@@ -13129,7 +13129,7 @@ public class GroupMetadataManagerTest {
         ConsumerGroupMember expectedMember2 = new ConsumerGroupMember.Builder(expectedMember1)
             .setMemberEpoch(11)
             .setState(MemberState.UNRELEASED_PARTITIONS)
-            .setPartitionsPendingRevocation(Collections.emptyMap())
+            .setPartitionsPendingRevocation(Map.of())
             .setAssignedPartitions(mkAssignment(
                 mkTopicAssignment(fooTopicId, 0),
                 mkTopicAssignment(zarTopicId, 0)))
@@ -13187,7 +13187,7 @@ public class GroupMetadataManagerTest {
                 .setGroupId(groupId)
                 .setMemberId(memberId2)
                 .setMemberEpoch(10)
-                .setTopicPartitions(Collections.emptyList())
+                .setTopicPartitions(List.of())
         );
 
         // Member 1 heartbeats to be notified to rejoin.
@@ -13446,7 +13446,7 @@ public class GroupMetadataManagerTest {
                     new ConsumerPartitionAssignor.Subscription(
                         List.of("foo"),
                         null,
-                        Collections.emptyList()
+                        List.of()
                     )
                 )))
         );
@@ -13494,7 +13494,7 @@ public class GroupMetadataManagerTest {
             10,
             null,
             null,
-            Collections.emptyList()
+            List.of()
         );
     }
 
@@ -13510,7 +13510,7 @@ public class GroupMetadataManagerTest {
                     new ConsumerPartitionAssignor.Subscription(
                         List.of("foo"),
                         null,
-                        Collections.emptyList()
+                        List.of()
                     )
                 )))
         );
@@ -13552,7 +13552,7 @@ public class GroupMetadataManagerTest {
                     new ConsumerPartitionAssignor.Subscription(
                         List.of("foo"),
                         null,
-                        Collections.emptyList()
+                        List.of()
                     )
                 )))
         );
@@ -13598,7 +13598,7 @@ public class GroupMetadataManagerTest {
                     new ConsumerPartitionAssignor.Subscription(
                         List.of("foo"),
                         null,
-                        Collections.emptyList()
+                        List.of()
                     )
                 )))
         );
@@ -13657,7 +13657,7 @@ public class GroupMetadataManagerTest {
                     new ConsumerPartitionAssignor.Subscription(
                         List.of("foo"),
                         null,
-                        Collections.emptyList()
+                        List.of()
                     )
                 )))
         );
@@ -13714,7 +13714,7 @@ public class GroupMetadataManagerTest {
                     .setMemberId(memberId)
                     .setGenerationId(memberId.equals(memberId1) ? 9 : 10)
             );
-            assertEquals(Collections.emptyList(), heartbeatResult.records());
+            assertEquals(List.of(), heartbeatResult.records());
             assertEquals(Errors.REBALANCE_IN_PROGRESS.code(), heartbeatResult.response().errorCode());
             context.assertSessionTimeout(groupId, memberId, sessionTimeout);
             context.assertJoinTimeout(groupId, memberId, rebalanceTimeout);
@@ -13759,7 +13759,7 @@ public class GroupMetadataManagerTest {
                     .setClassicMemberMetadata(
                         new ConsumerGroupMemberMetadataValue.ClassicMemberMetadata()
                             .setSessionTimeoutMs(5000)
-                            .setSupportedProtocols(Collections.emptyList())
+                            .setSupportedProtocols(List.of())
                     )
                     .build()))
             .build();
@@ -13785,7 +13785,7 @@ public class GroupMetadataManagerTest {
                     .setClassicMemberMetadata(
                         new ConsumerGroupMemberMetadataValue.ClassicMemberMetadata()
                             .setSessionTimeoutMs(5000)
-                            .setSupportedProtocols(Collections.emptyList())
+                            .setSupportedProtocols(List.of())
                     )
                     .build()))
             .build();
@@ -13831,7 +13831,7 @@ public class GroupMetadataManagerTest {
                     new ConsumerPartitionAssignor.Subscription(
                         List.of("foo"),
                         null,
-                        Collections.emptyList()
+                        List.of()
                     )
                 )))
         );
@@ -13891,7 +13891,7 @@ public class GroupMetadataManagerTest {
                     new ConsumerPartitionAssignor.Subscription(
                         List.of("foo"),
                         null,
-                        Collections.emptyList()
+                        List.of()
                     )
                 )))
         );
@@ -14145,7 +14145,7 @@ public class GroupMetadataManagerTest {
                 GroupCoordinatorRecordHelpers.newConsumerGroupMemberSubscriptionTombstoneRecord(groupId, memberId3)
             ),
             // Update subscription metadata.
-            List.of(GroupCoordinatorRecordHelpers.newConsumerGroupSubscriptionMetadataRecord(groupId, Collections.emptyMap())),
+            List.of(GroupCoordinatorRecordHelpers.newConsumerGroupSubscriptionMetadataRecord(groupId, Map.of())),
             // Bump the group epoch.
             List.of(GroupCoordinatorRecordHelpers.newConsumerGroupEpochRecord(groupId, 11))
         );
@@ -14295,7 +14295,7 @@ public class GroupMetadataManagerTest {
             leaveResult.response()
         );
 
-        assertEquals(Collections.emptyList(), leaveResult.records());
+        assertEquals(List.of(), leaveResult.records());
     }
 
     @Test
@@ -14642,7 +14642,7 @@ public class GroupMetadataManagerTest {
         GroupMetadataManagerTestContext context = new GroupMetadataManagerTestContext.Builder().build();
 
         // GroupId is not required
-        List<ShareGroupDescribeResponseData.DescribedGroup> groups = context.sendShareGroupDescribe(Collections.emptyList());
+        List<ShareGroupDescribeResponseData.DescribedGroup> groups = context.sendShareGroupDescribe(List.of());
         assertEquals(0, groups.size());
 
         // Group id not found
@@ -14659,7 +14659,7 @@ public class GroupMetadataManagerTest {
             .build();
 
         assignor.prepareGroupAssignment(new GroupAssignment(
-            Collections.emptyMap()
+            Map.of()
         ));
 
         List<String> groupIds = List.of("group-id-1", "group-id-2");
@@ -14716,7 +14716,7 @@ public class GroupMetadataManagerTest {
             .build();
 
         assignor.prepareGroupAssignment(new GroupAssignment(
-            Collections.emptyMap()
+            Map.of()
         ));
 
         String memberId = Uuid.randomUuid().toString();
@@ -14979,7 +14979,7 @@ public class GroupMetadataManagerTest {
             .build();
 
         assignor.prepareGroupAssignment(new GroupAssignment(
-            Collections.emptyMap()
+            Map.of()
         ));
 
         context.replay(GroupCoordinatorRecordHelpers.newShareGroupEpochRecord(groupId, 100));
@@ -15102,7 +15102,7 @@ public class GroupMetadataManagerTest {
                     .setMemberEpoch(0)
                     .setRebalanceTimeoutMs(90000)
                     .setSubscribedTopicNames(List.of("foo"))
-                    .setTopicPartitions(Collections.emptyList()));
+                    .setTopicPartitions(List.of()));
         assertEquals(1, result.response().memberEpoch());
 
         // Verify heartbeat interval
@@ -15113,7 +15113,7 @@ public class GroupMetadataManagerTest {
 
         // Advance time.
         assertEquals(
-            Collections.emptyList(),
+            List.of(),
             context.sleep(result.response().heartbeatIntervalMs())
         );
 
@@ -15139,7 +15139,7 @@ public class GroupMetadataManagerTest {
 
         // Advance time.
         assertEquals(
-            Collections.emptyList(),
+            List.of(),
             context.sleep(result.response().heartbeatIntervalMs())
         );
 
@@ -15198,7 +15198,7 @@ public class GroupMetadataManagerTest {
 
         // Advance time.
         assertEquals(
-            Collections.emptyList(),
+            List.of(),
             context.sleep(result.response().heartbeatIntervalMs())
         );
 
@@ -15224,7 +15224,7 @@ public class GroupMetadataManagerTest {
 
         // Advance time.
         assertEquals(
-            Collections.emptyList(),
+            List.of(),
             context.sleep(result.response().heartbeatIntervalMs())
         );
 
@@ -15418,7 +15418,7 @@ public class GroupMetadataManagerTest {
             .setTopologyEpoch(10)
             .setProcessId("processid")
             .setUserEndpoint(new Endpoint().setHost("localhost").setPort(9999))
-            .setClientTags(Collections.singletonMap("key", "value"))
+            .setClientTags(Map.of("key", "value"))
             .build();
 
         // The group and the member are created if they do not exist.
@@ -15850,7 +15850,7 @@ public class GroupMetadataManagerTest {
                 .setServerAssignor("range")
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicNames(List.of("foo", "bar"))
-                .setTopicPartitions(Collections.emptyList())));
+                .setTopicPartitions(List.of())));
     }
 
     @Test
@@ -16131,7 +16131,7 @@ public class GroupMetadataManagerTest {
 
             List.of(memberId1, memberId2).forEach(memberId ->
                 assertEquals(
-                    Collections.singleton(fooTopicId),
+                    Set.of(fooTopicId),
                     spec.memberSubscription(memberId).subscribedTopicIds(),
                     String.format("Member %s has unexpected subscribed topic ids", memberId)
                 )
@@ -16165,7 +16165,7 @@ public class GroupMetadataManagerTest {
                         mkTopicAssignment(fooTopicId, 0, 1)))
                     .build())
                 .withResolvedRegularExpression("foo*", new ResolvedRegularExpression(
-                    Collections.singleton(fooTopicName),
+                    Set.of(fooTopicName),
                     100L,
                     12345L))
                 .withAssignment(memberId1, mkAssignment(
@@ -16180,7 +16180,7 @@ public class GroupMetadataManagerTest {
                 .setMemberEpoch(0)
                 .setRebalanceTimeoutMs(10000)
                 .setSubscribedTopicRegex("foo*")
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -16234,7 +16234,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicRegex("foo*")
                 .setServerAssignor("range")
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -16333,7 +16333,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicRegex("foo*|bar*")
                 .setServerAssignor("range")
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -16414,7 +16414,7 @@ public class GroupMetadataManagerTest {
         String barTopicName = "bar";
 
         MockPartitionAssignor assignor = new MockPartitionAssignor("range");
-        assignor.prepareGroupAssignment(new GroupAssignment(Collections.emptyMap()));
+        assignor.prepareGroupAssignment(new GroupAssignment(Map.of()));
 
         GroupMetadataManagerTestContext context = new GroupMetadataManagerTestContext.Builder()
             .withConfig(GroupCoordinatorConfig.CONSUMER_GROUP_ASSIGNORS_CONFIG, List.of(assignor))
@@ -16433,7 +16433,7 @@ public class GroupMetadataManagerTest {
                 .setRebalanceTimeoutMs(5000)
                 .setSubscribedTopicRegex("foo*")
                 .setServerAssignor("range")
-                .setTopicPartitions(Collections.emptyList()));
+                .setTopicPartitions(List.of()));
 
         assertResponseEquals(
             new ConsumerGroupHeartbeatResponseData()
@@ -16461,7 +16461,7 @@ public class GroupMetadataManagerTest {
             // The group epoch is bumped.
             GroupCoordinatorRecordHelpers.newConsumerGroupEpochRecord(groupId, 1),
             // The target assignment is created.
-            GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentRecord(groupId, memberId1, Collections.emptyMap()),
+            GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentRecord(groupId, memberId1, Map.of()),
             GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentEpochRecord(groupId, 1),
             // The member current state is created.
             GroupCoordinatorRecordHelpers.newConsumerGroupCurrentAssignmentRecord(groupId, expectedMember1)
@@ -16519,7 +16519,7 @@ public class GroupMetadataManagerTest {
         // The pending task was a no-op.
         MockCoordinatorExecutor.ExecutorResult<CoordinatorRecord> task = tasks.get(0);
         assertEquals(groupId + "-regex", task.key);
-        assertRecordsEquals(Collections.emptyList(), task.result.records());
+        assertRecordsEquals(List.of(), task.result.records());
 
         // The member heartbeats again. It triggers a new resolution.
         result = context.consumerGroupHeartbeat(
@@ -16587,7 +16587,7 @@ public class GroupMetadataManagerTest {
         String foooTopicName = "fooo";
 
         MockPartitionAssignor assignor = new MockPartitionAssignor("range");
-        assignor.prepareGroupAssignment(new GroupAssignment(Collections.emptyMap()));
+        assignor.prepareGroupAssignment(new GroupAssignment(Map.of()));
 
         MetadataImage image = new MetadataImageBuilder()
             .addTopic(fooTopicId, fooTopicName, 6)
@@ -16953,10 +16953,10 @@ public class GroupMetadataManagerTest {
         String barTopicName = "bar";
 
         MockPartitionAssignor assignor = new MockPartitionAssignor("range");
-        assignor.prepareGroupAssignment(new GroupAssignment(Collections.emptyMap()));
+        assignor.prepareGroupAssignment(new GroupAssignment(Map.of()));
 
         GroupMetadataManagerTestContext context = new GroupMetadataManagerTestContext.Builder()
-            .withConfig(GroupCoordinatorConfig.CONSUMER_GROUP_ASSIGNORS_CONFIG, Collections.singletonList(assignor))
+            .withConfig(GroupCoordinatorConfig.CONSUMER_GROUP_ASSIGNORS_CONFIG, List.of(assignor))
             .withMetadataImage(new MetadataImageBuilder()
                 .addTopic(fooTopicId, fooTopicName, 6)
                 .addTopic(barTopicId, barTopicName, 3)
@@ -17036,7 +17036,7 @@ public class GroupMetadataManagerTest {
 
         // Verify the expired timeout.
         assertEquals(
-            Collections.singletonList(new ExpiredTimeout<Void, CoordinatorRecord>(
+            List.of(new ExpiredTimeout<Void, CoordinatorRecord>(
                 groupSessionTimeoutKey(groupId, memberId2),
                 new CoordinatorResult<>(
                     List.of(
@@ -17044,7 +17044,7 @@ public class GroupMetadataManagerTest {
                         GroupCoordinatorRecordHelpers.newConsumerGroupTargetAssignmentTombstoneRecord(groupId, memberId2),
                         GroupCoordinatorRecordHelpers.newConsumerGroupMemberSubscriptionTombstoneRecord(groupId, memberId2),
                         GroupCoordinatorRecordHelpers.newConsumerGroupRegularExpressionTombstone(groupId, "bar*"),
-                        GroupCoordinatorRecordHelpers.newConsumerGroupSubscriptionMetadataRecord(groupId, Collections.emptyMap()),
+                        GroupCoordinatorRecordHelpers.newConsumerGroupSubscriptionMetadataRecord(groupId, Map.of()),
                         GroupCoordinatorRecordHelpers.newConsumerGroupEpochRecord(groupId, 12)
                     )
                 )
@@ -17067,10 +17067,10 @@ public class GroupMetadataManagerTest {
         String barTopicName = "bar";
 
         MockPartitionAssignor assignor = new MockPartitionAssignor("range");
-        assignor.prepareGroupAssignment(new GroupAssignment(Collections.emptyMap()));
+        assignor.prepareGroupAssignment(new GroupAssignment(Map.of()));
 
         GroupMetadataManagerTestContext context = new GroupMetadataManagerTestContext.Builder()
-            .withConfig(GroupCoordinatorConfig.CONSUMER_GROUP_ASSIGNORS_CONFIG, Collections.singletonList(assignor))
+            .withConfig(GroupCoordinatorConfig.CONSUMER_GROUP_ASSIGNORS_CONFIG, List.of(assignor))
             .withMetadataImage(new MetadataImageBuilder()
                 .addTopic(fooTopicId, fooTopicName, 6)
                 .addTopic(barTopicId, barTopicName, 3)
@@ -17208,7 +17208,7 @@ public class GroupMetadataManagerTest {
     @Test
     public void testSharePartitionDeleteRequest() {
         MockPartitionAssignor assignor = new MockPartitionAssignor("range");
-        assignor.prepareGroupAssignment(new GroupAssignment(Collections.emptyMap()));
+        assignor.prepareGroupAssignment(new GroupAssignment(Map.of()));
         GroupMetadataManagerTestContext context = new GroupMetadataManagerTestContext.Builder()
             .withConfig(GroupCoordinatorConfig.CONSUMER_GROUP_ASSIGNORS_CONFIG, List.of(assignor))
             .build();
